Fix the contrast and remove unneeded nav link

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,7 +164,7 @@ body {
   }
   .navbar-brand,
   a {
-    color: rgb(var(--blue-800));
+    color: rgb(var(--blue-900));
   }
   .bg-primary {
     --bs-bg-opacity: 1;
